align docker-compose.yml with actual Dockerfiles by stting devenv defaults and optional prophet servce under forecasting route, redirecting login to home after login success + store user in localStorage, need revision on frontend changes please

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,3 +5,16 @@ npm-debug.log
 *.md
 .env
 .vscode
+
+# Python / backend local artifacts (never copy into images)
+__pycache__/
+*.py[cod]
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.tox/
+.nox/
+.coverage
+htmlcov/
+.hypothesis/
+.venv*/
