--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Flask Backend
   backend:
@@ -14,7 +12,12 @@ services:
       - backend-db:/app/data
     environment:
       - FLASK_ENV=development
+      - FLASK_DEBUG=1
       - PYTHONUNBUFFERED=1
+      # Persist DB in the named volume mounted at /app/data
+      - DATABASE_PATH=/app/data/pinkcafe.db
+      # Allow local dev frontend to call the API (adjust as needed)
+      - CORS_ORIGINS=http://localhost:3000
     command: python app.py
     restart: unless-stopped
 
@@ -39,5 +42,23 @@ services:
     tty: true
     restart: unless-stopped
 
+  # Prophet Forecasting Service (optional batch job)
+  # Enable with: docker compose --profile forecasting up --build prophet
+  prophet:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: pinkcafe-prophet
+    volumes:
+      # Optional: mount backend code for quick iteration (no rebuild)
+      - ./pinkcafe/backend:/app/backend
+      - prophet-output:/app/output
+    environment:
+      - MPLBACKEND=Agg
+    restart: "no"
+    profiles:
+      - forecasting
+
 volumes:
   backend-db:
+  prophet-output:
