--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,14 +1,37 @@
 name: Docker Image CI
 
 on:
-  push: { branches: [ "main" ] }
-  pull_request: { branches: [ "main" ] }
+  push:
+    branches: ["main"]
+    paths:
+      - "Dockerfile"
+      - "docker-compose.yml"
+      - "src/backend/**"
+      - "pinkcafe/**"
+      - ".github/workflows/docker-image.yml"
+  pull_request:
+    branches: ["main"]
+    paths:
+      - "Dockerfile"
+      - "docker-compose.yml"
+      - "src/backend/**"
+      - "pinkcafe/**"
+      - ".github/workflows/docker-image.yml"
+
+concurrency:
+  group: docker-ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build runtime image (app target)
         uses: docker/build-push-action@v6
@@ -17,6 +40,10 @@ jobs:
           target: app
           tags: pinkcafe-app:runtime
           load: true   # <-- Important so 'docker run' can use it
+          provenance: false
+          sbom: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Run container
         run: docker run -d --name pinkcafe-app -p 8080:5001 pinkcafe-app:runtime
