--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,11 @@ concurrency:
   group: docker-ci-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  CONTAINER_NAME: pinkcafe-app
+  HOST_PORT: 8080
+  API_URL: http://127.0.0.1:8080
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -39,28 +44,51 @@ jobs:
           context: .
           target: app
           tags: pinkcafe-app:runtime
-          load: true   # <-- Important so 'docker run' can use it
+          load: true
           provenance: false
           sbom: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Run container
-        run: docker run -d --name pinkcafe-app -p 8080:5001 pinkcafe-app:runtime
+        run: |
+          docker run -d \
+            --name ${{ env.CONTAINER_NAME }} \
+            -p ${{ env.HOST_PORT }}:5001 \
+            -e FLASK_ENV=production \
+            -e FLASK_DEBUG=0 \
+            -e DATABASE_PATH=/app/data/pinkcafe.db \
+            -e CORS_ORIGINS='*' \
+            pinkcafe-app:runtime
 
       - name: Wait for API
         run: |
-          for i in {1..30}; do
-            curl -fsS http://localhost:8080/api >/dev/null && exit 0
+          echo "Waiting for backend to respond..."
+          i=0
+          while [ $i -lt 60 ]; do
+            if curl -fsS "${{ env.API_URL }}/api" >/dev/null 2>&1; then
+              echo "Backend responded after ${i}s"
+              exit 0
+            fi
             sleep 1
+            i=$((i + 1))
           done
-          echo "App didn't respond"; docker logs pinkcafe-app || true; exit 1
+          echo "Backend did not respond within 60s"
+          docker logs ${{ env.CONTAINER_NAME }} 2>&1 || true
+          exit 1
+
+      - name: Verify smoke test inputs
+        run: |
+          COFFEE="src/backend/CSV_Files/Pink CoffeeSales March - Oct 2025.csv"
+          FOOD="src/backend/CSV_Files/Pink CroissantSales March - Oct 2025.csv"
+          test -f "$COFFEE" || { echo "Missing: $COFFEE"; exit 1; }
+          test -f "$FOOD" || { echo "Missing: $FOOD"; exit 1; }
+          echo "CSV files found"
 
       - name: Backend smoke test (datasets + analytics)
         run: |
-          # Run the same smoke test scripts used locally, but target the container's mapped port.
-          BASE_URL="http://127.0.0.1:8080" bash ./src/backend/tests/backend_smoke_test.sh
+          BASE_URL="${{ env.API_URL }}" bash ./src/backend/tests/backend_smoke_test.sh
 
       - name: Cleanup
         if: always()
-        run: docker rm -f pinkcafe-app || true
+        run: docker rm -f ${{ env.CONTAINER_NAME }} 2>/dev/null || true
