--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,9 @@ concurrency:
   group: docker-ci-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write  # Needed to push debuglog.md on failure
+
 env:
   CONTAINER_NAME: pinkcafe-app
   HOST_PORT: 8080
@@ -39,6 +42,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build runtime image (app target)
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -51,6 +55,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Run container
+        id: run
         run: |
           docker run -d \
             --name ${{ env.CONTAINER_NAME }} \
@@ -62,6 +67,7 @@ jobs:
             pinkcafe-app:runtime
 
       - name: Wait for API
+        id: wait
         run: |
           echo "Waiting for backend to respond..."
           i=0
@@ -78,6 +84,7 @@ jobs:
           exit 1
 
       - name: Verify smoke test inputs
+        id: verify
         run: |
           COFFEE="src/backend/CSV_Files/Pink CoffeeSales March - Oct 2025.csv"
           FOOD="src/backend/CSV_Files/Pink CroissantSales March - Oct 2025.csv"
@@ -86,8 +93,74 @@ jobs:
           echo "CSV files found"
 
       - name: Backend smoke test (datasets + analytics)
+        id: smoke
         run: |
-          BASE_URL="${{ env.API_URL }}" bash ./src/backend/tests/backend_smoke_test.sh
+          set -o pipefail
+          BASE_URL="${{ env.API_URL }}" bash ./src/backend/tests/backend_smoke_test.sh 2>&1 | tee debuglog.md
+
+      - name: Save debug log on failure
+        if: failure()
+        run: |
+          {
+            echo "# Docker Image CI - Failure Log"
+            echo ""
+            echo "## Workflow: ${{ github.workflow }}"
+            echo "## Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+            echo "## Timestamp: $(date -u +"%Y-%m-%d %H:%M:%S UTC")"
+            echo ""
+            echo "## Why it failed"
+            echo ""
+            if [ "${{ steps.build.outcome }}" = "failure" ]; then
+              echo "**Build failed.** The Docker image could not be built. Common causes:"
+              echo "- Syntax errors in Dockerfile or missing dependencies"
+              echo "- Frontend build failure (npm install/build errors)"
+              echo "- Backend requirements.txt missing or incompatible packages"
+              echo "- Prophet or other heavy deps failing to compile"
+            elif [ "${{ steps.run.outcome }}" = "failure" ]; then
+              echo "**Run container failed.** The image built but the container failed to start. Common causes:"
+              echo "- Missing entrypoint or CMD"
+              echo "- Port already in use"
+              echo "- Missing env vars or config"
+            elif [ "${{ steps.wait.outcome }}" = "failure" ]; then
+              echo "**Wait for API failed.** The container started but /api did not respond within 60s. Common causes:"
+              echo "- Backend crashed on startup (check container logs below)"
+              echo "- Database init failed"
+              echo "- Gunicorn/Flask not binding to 0.0.0.0:5001"
+            elif [ "${{ steps.verify.outcome }}" = "failure" ]; then
+              echo "**Verify smoke test inputs failed.** Required CSV files are missing. Common causes:"
+              echo "- CSV_Files/Pink CoffeeSales March - Oct 2025.csv not in repo"
+              echo "- CSV_Files/Pink CroissantSales March - Oct 2025.csv not in repo"
+              echo "- CSV files not committed or in .gitignore"
+            elif [ "${{ steps.smoke.outcome }}" = "failure" ]; then
+              echo "**Backend smoke test failed.** API responded but dataset upload or analytics failed. Common causes:"
+              echo "- CSV format invalid (first column must be 'Date', merge conflicts in CSV)"
+              echo "- Backend route error or database error"
+              echo "- Check smoke test output below for details"
+            else
+              echo "Unknown step failed. Check the full run logs above."
+            fi
+            echo ""
+            echo "---"
+            echo ""
+            if [ -f debuglog.md ]; then
+              echo "## Smoke test output"
+              echo ""
+              cat debuglog.md
+              echo ""
+            fi
+            echo "## Container logs (if available)"
+            echo ""
+            docker logs ${{ env.CONTAINER_NAME }} 2>&1 || echo "(container not running)"
+          } > debuglog.md
+
+      - name: Commit debug log
+        if: failure()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add debuglog.md
+          git diff --staged --quiet || git commit -m "ci: add failure debug log [skip ci]"
+          git push || true
 
       - name: Cleanup
         if: always()
